# synnex

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py
agents/implementation/: content_interaction_agent.py  helpers.py  prototype_builder_agent.py  qa_alignment_agent.py  requirement_mapping_agent.py  run_test_and_fix_agent.py  spec_intake_agent.py
clients/: __init__.py  llm.py
deploy/question_coaching_chatbot/: Question_Coaching_Chatbot_contents.json  app.py
deploy/question_quest_v2/: Question_Quest_contents.json  app.py
docs/: agent_feedback_loop_strategy.md  implementation_decisions.md  multi_service_generation_comparison.md  project_context.md  project_structure.md
loaders/: __init__.py  planning_package_loader.py
orchestrator/: __init__.py  app_source.py  feedback_routing.py  pipeline.py
outputs/: README.md  builder_qa_output.json  change_log.md  execution_log.txt  final_summary.md  growth_output.json  input_intake_report.json  planner_output.json  prototype_builder_output.json  qa_alignment_output.json  qa_report.md  quest_output.json  question_output.json  question_quest_contents.json  quiz_contents.json  requirement_mapping_output.json  run_test_and_fix_output.json  spec_intake_output.json
prompts/: README.md
tests/: fakes.py  test_content_interaction_semantics.py  test_llm_client.py  test_orchestrator.py  test_planning_package_loader.py  test_planning_package_schema.py  test_prototype_builder_agent.py  test_streamlit_mvp.py
validators/: __init__.py  planning_package_validator.py
(+54 files in other folders)
