[project]
name = "synnex-agent-team"
version = "0.1.0"
description = "Minimum sequential AI agent team skeleton for the Question-Power Co-Learner project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "streamlit>=1.40,<2",
]

[project.scripts]
synnex-agent-team = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "schemas"]
